--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
               <a class="nav__link" href="#staff">Escolhas da Equipe</a>
             </li>
             <li>
-              <a class="nav__link">Eventos</a>
+              <a class="nav__link" href="#events">Eventos</a>
             </li>
             <li>
               <a class="nav__link">Seja um membro</a>
@@ -129,6 +129,93 @@
               </div>
             </li>
           </ul>
+        </section>
+        <!-- sprint 3.2 -->
+        <section class="events" id="events">
+          <div class="events__content">
+            <h2 class="events__heading">Próximos eventos:</h2>
+            <h3 class="events__title">
+              Em homenagem à Joan Feynman: Mulheres na Astrofísica
+            </h3>
+            <div class="event-info events__info-section">
+              <div class="event-info__item">
+                <img
+                  src="./images/icon_calendar.svg"
+                  alt="Calendar icon"
+                  class="event-info__icon"
+                />
+                <p class="event-info__text">Segunda-feira, 12 de janeiro</p>
+              </div>
+              <div class="event-info__item">
+                <img
+                  src="./images/icon_pin.svg"
+                  alt="Pin icon"
+                  class="event-info__icon"
+                />
+                <p class="event-info__text">
+                  Sala de Conferências da Biblioteca Triple Peaks e Online
+                </p>
+              </div>
+            </div>
+            <p class="events__description">
+              Neste evento, que homenageia a pessoa que inspirou o nome da
+              biblioteca, vamos ter uma palestra que vai nos levar para uma
+              jornada explorando alguns das pesquisadoras mais proeminentes no
+              mundo da ciência espacial. É fácil aceitar o equívoco de que esse
+              campo era em sua maioria dominado por homens, mas nossa palestra
+              visa mudar essa noção e provar que esse não é o caso desde, pelo
+              menos, o século XVIII.
+            </p>
+            <a href="#" class="events__more">Mais eventos &rarr;</a>
+          </div>
+          <div class="events__cover">
+            <img
+              src="./images/cafe.png"
+              alt="Imagem de uma cafeteria em uma espécie de cartoon"
+              class="events__image"
+            />
+            <div class="person person_name_feynman">
+              <p class="person__caption">Joan Feynman</p>
+              <img
+                class="person__image person__image_size_l"
+                alt="Foto da Joan Feynman"
+                src="./images/person_feynman.png"
+              />
+            </div>
+            <div class="person person_name_burbidge">
+              <p class="person__caption">Margareth Burbidge</p>
+              <img
+                class="person__image person__image_size_m"
+                alt="Foto da Joan Feynman"
+                src="./images/person_burbidge.png"
+              />
+            </div>
+            <div class="person person_name_cannon">
+              <p class="person__caption">Annie Jump Cannon</p>
+              <img
+                class="person__image person__image_size_m"
+                alt="Foto da Joan Feynman"
+                src="./images/person_cannon.png"
+              />
+            </div>
+            <div class="person person_name_mitchell">
+              <p class="person__caption">Maria Mitchell</p>
+              <img
+                class="person__image person__image_size_s"
+                alt="Foto da Joan Feynman"
+                src="./images/person_mitchell.png"
+              />
+            </div>
+            <div class="person person_name_tarter">
+              <p class="person__caption">Jill Tarter</p>
+              <img
+                class="person__image person__image_size_m"
+                alt="Foto da Joan Feynman"
+                src="./images/person_tarter.png"
+              />
+            </div>
+          </div>
+          <!-- Comece a criar a composição aqui -->
         </section>
       </main>
     </div>
