--- a/index.html
+++ b/index.html
@@ -321,3 +321,17 @@
     </div>
   </body>
 </html>
+
+<!--
+
+FEEDBACK DA AUTOMÇÃO DO PROJETO 3.3
+
+Valor incorreto para as propriedades: color do seletor .footer. Revise o roteiro mais uma vez.
+
+Valor incorreto para as propriedades: margin-left do seletor .footer__column_content_social. Revise o roteiro mais uma vez.
+
+Valor incorreto para as propriedades: margin do seletor .footer__list. Revise o roteiro mais uma vez.
+
+Valor incorreto para as propriedades: column-gap do seletor .footer__column-link. Revise o roteiro mais uma vez.
+
+-->
